[tool.poetry]
name = "simpleregex"
version = "0.1.0"
description = "Wrapper for RegEx, made so the RegEx code will be understable"
authors = ["Dominik Dlugajczyk <dominik.dlugajczyk@netguru.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
ipython = "^8.11.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 80
known_first_party = [ "simpleregex" ]
multi_line_output = 3
sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = true

[tool.black]
line_length = 80
target-version = [ "py38" ]
ignore = [ "W503", "W504" ]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term:skip-covered --cov-report html --no-cov-on-fail -vv --ff -x simpleregex/tests/"
norecursedirs = [ ".cache", ".git", ".idea", "bin", "*migrations*", "spa", "static", "var", "docker" ]
filterwarnings = []

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/test_*/*",
    "*/.cache/*",
    "conftest.py",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py311,
    py310,
    py39,
    py38

[testenv]
deps =
    pytest >= 7.2.2,
    pytest-cov >= 4.0.0,
    icecream >= 2.1.3
commands = pytest {posargs}
"""
